--- a/index.html
+++ b/index.html
@@ -3,93 +3,177 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>My Discord Bot | 1分で導入</title>
-  <meta name="description" content="あなたのサーバーに1分で導入できるDiscord Bot。無料プランあり。">
-  <!-- SNSに貼られた時の見え方（お好みで変更） -->
-  <meta property="og:title" content="My Discord Bot | 1分で導入">
-  <meta property="og:description" content="あなたのサーバーに1分で導入できるDiscord Bot。無料プランあり。">
+  <title>公助君 | 荒らし対策とロール自動復元がこれ一つ</title>
+  <meta name="description" content="公助君はDiscordサーバー向けのセキュリティBot。CAPTCHA・連投対策・重大操作の即時検知、ロール自動バックアップ＆復元、Spotlightで“良投稿”紹介まで。無料プランはWL上限3名。">
+  <meta property="og:title" content="公助君 | 荒らし対策とロール自動復元がこれ一つ">
+  <meta property="og:description" content="CAPTCHA・連投対策・重大操作の即時検知、ロール自動バックアップ＆復元、Spotlightで“良投稿”紹介。無料プランはWL上限3名。">
   <meta property="og:type" content="website">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    :root { --fg:#0f172a; --muted:#475569; --bg:#f8fafc; --card:#ffffff; --acc:#6366f1; }
-    *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--fg);font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji"}
-    .wrap{max-width:980px;margin:0 auto;padding:24px}
-    .hero{display:grid;grid-template-columns:1.2fr 1fr;gap:24px;align-items:center;margin:32px 0}
-    .card{background:var(--card);border:1px solid #e2e8f0;border-radius:14px;padding:20px;box-shadow:0 1px 0 rgba(0,0,0,.04)}
-    h1{font-size:clamp(28px,4vw,40px);line-height:1.1;margin:0 0 12px}
-    p.lead{color:var(--muted);font-size:18px;margin:0 0 18px}
-    .btn{display:inline-block;padding:12px 18px;border-radius:10px;text-decoration:none;font-weight:700}
-    .btn.primary{background:var(--acc);color:#fff}
-    .btn.ghost{border:1px solid #cbd5e1;color:var(--fg);background:#fff}
-    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr))}
-    .kicker{font-size:12px;color:#64748b;letter-spacing:.08em;text-transform:uppercase}
+    :root{
+      --bg:#0b1020;      /* 背景(濃紺) */
+      --card:#0f1530;    /* カード(紺) */
+      --line:#273255;    /* 枠線 */
+      --fg:#e6e9f5;      /* 文字(明) */
+      --muted:#a8b0d4;   /* 補助文字 */
+      --acc:#7c6bff;     /* アクセント(紫) */
+      --acc-2:#29b6f6;   /* サブ(青) */
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; background:
+        radial-gradient(1200px 600px at 80% -10%, rgba(41,182,246,.15), transparent),
+        radial-gradient(1000px 500px at -10% 20%, rgba(124,107,255,.18), transparent),
+        var(--bg);
+      color:var(--fg);
+      font-family:"Noto Sans JP", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      line-height:1.7;
+    }
+    .wrap{max-width:1040px;margin:0 auto;padding:28px}
+    header.card{
+      display:flex;justify-content:space-between;align-items:center;gap:16px;
+      background:linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
+      border:1px solid var(--line); border-radius:16px; padding:16px 18px; backdrop-filter: blur(6px);
+    }
+    .brand{font-family:Inter, system-ui, sans-serif; font-weight:700; letter-spacing:.3px}
+    nav a{display:inline-block;padding:10px 14px;border-radius:12px;text-decoration:none;color:var(--fg);border:1px solid transparent}
+    nav a:hover{background:rgba(255,255,255,.06);border-color:rgba(255,255,255,.12)}
+    .btn{display:inline-block;padding:12px 18px;border-radius:12px;text-decoration:none;font-weight:700}
+    .btn.primary{background:linear-gradient(90deg,var(--acc),var(--acc-2)); color:#fff}
+    .btn.ghost{border:1px solid var(--line); color:var(--fg); background:transparent}
+    .hero{display:grid;grid-template-columns:1.2fr 1fr;gap:24px;align-items:center;margin:28px 0}
+    .card{background:var(--card); border:1px solid var(--line); border-radius:16px; padding:22px}
+    h1{font-size:clamp(28px,4vw,40px); line-height:1.15; margin:8px 0 12px; font-family:Inter, "Noto Sans JP", sans-serif;}
+    .lead{color:var(--muted); font-size:18px; margin:0 0 18px}
+    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(230px,1fr))}
+    .kicker{font-size:12px;color:#b9c2ff;letter-spacing:.12em;text-transform:uppercase}
     .muted{color:var(--muted)}
-    footer{margin:48px 0 12px;color:#94a3b8;font-size:14px;text-align:center}
-    @media (max-width:820px){ .hero{grid-template-columns:1fr} }
+    footer{margin:48px 0 12px;color:#9aa4d1;font-size:14px;text-align:center}
+    .badge{display:inline-block;padding:6px 10px;border-radius:999px;background:rgba(124,107,255,.15);border:1px solid rgba(124,107,255,.35);color:#d9d5ff;font-weight:700;font-size:12px}
+    code.cmd{display:inline-block;padding:8px 10px;border-radius:10px;background:#0c142b;border:1px solid var(--line);font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
+    @media (max-width:880px){ .hero{grid-template-columns:1fr} }
+    a.link{color:#aee3ff}
   </style>
 </head>
 <body>
   <div class="wrap">
-    <header class="card" style="display:flex;justify-content:space-between;align-items:center;gap:16px">
-      <div><strong>My Discord Bot</strong></div>
-      <nav style="display:flex;gap:10px">
-        <a class="btn ghost" href="#features">機能</a>
-        <a class="btn ghost" href="#pricing">料金</a>
-        <a class="btn primary" href="https://discord.com/oauth2/authorize?client_id=1405442735892201535&permissions=8&integration_type=0&scope=bot+applications.commands">今すぐサーバーに追加</a>
+    <header class="card">
+      <div class="brand">公助君</div>
+      <nav>
+        <a href="#features">機能</a>
+        <a href="#pricing">料金</a>
+        <a class="btn primary" href="https://discord.com/oauth2/authorize?client_id=1405442735892201535&permissions=8&integration_type=0&scope=bot+applications.commands">今すぐ追加</a>
       </nav>
     </header>
 
     <section class="hero">
       <div class="card">
-        <div class="kicker">1分で導入 / 無料プランあり</div>
-        <h1>あなたのサーバーを、AIでスマートに。</h1>
-        <p class="lead">モデレーション、定型文返信、分析ログまで。招待ボタンひとつでセットアップ完了。</p>
+        <span class="kicker">荒らし対策・ロール自動復元・Spotlight</span>
+        <h1>サーバーを守る。<br/>運営を軽くする。</h1>
+        <p class="lead">CAPTCHA、連投検知、重大操作の即時検出、ロール自動バックアップ＆復元。必要十分なセキュリティを1つに。</p>
         <div style="display:flex;gap:10px;flex-wrap:wrap">
           <a class="btn primary" href="https://discord.com/oauth2/authorize?client_id=1405442735892201535&permissions=8&integration_type=0&scope=bot+applications.commands">Discordに追加</a>
-          <a class="btn ghost" href="#pricing">料金を見る</a>
+          <a class="btn ghost" href="#howto">導入方法</a>
         </div>
       </div>
       <div class="card">
-        <strong>デモ</strong>
-        <p class="muted">/help → コマンド一覧 / /setup → 初期設定ウィザード / 自動モデレーションON</p>
-        <img alt="Botデモの擬似画像" src="https://dummyimage.com/800x480/ffffff/aaa.png&text=Discord+Bot+Demo" style="width:100%;border-radius:10px;border:1px solid #e2e8f0">
+        <div class="badge">デモ</div>
+        <p class="muted">!ping / !security_status / !spotlight_status</p>
+        <img alt="demo" src="https://dummyimage.com/800x480/0f1530/8892bf.png&text=SecureBot+Demo" style="width:100%;border-radius:12px;border:1px solid var(--line)">
       </div>
     </section>
 
     <section id="features" class="card">
-      <h2>主な機能</h2>
+      <h2>できること</h2>
       <div class="grid">
-        <div><h3>自動モデレーション</h3><p class="muted">NGワード・連投検出・招待リンク遮断を自動で。</p></div>
-        <div><h3>スマート返信</h3><p class="muted">よくある質問に即応。テンプレも学習可能。</p></div>
-        <div><h3>監査ログ</h3><p class="muted">誰が何をしたかを安全に記録。あとから見返せます。</p></div>
-        <div><h3>かんたん設定</h3><p class="muted">/setup で最短導入。ロール権限もガイド付き。</p></div>
+        <div>
+          <h3>ホワイトリスト（WL）と権限ガード</h3>
+          <p class="muted">WLユーザー/ロールのみが設定変更。無料プランはWLユーザー上限 <strong>3名</strong>。</p>
+        </div>
+        <div>
+          <h3>CAPTCHA 認証（DM）</h3>
+          <p class="muted">参加直後にコード送付→返信でVerifiedロールを自動付与。未完了は隔離。</p>
+        </div>
+        <div>
+          <h3>連投・大量メンション対策</h3>
+          <p class="muted">1秒ペース連投を検知してロール剥奪＋ミュート or クールダウン。</p>
+        </div>
+        <div>
+          <h3>ロール自動バックアップ＆復元</h3>
+          <p class="muted">離脱/更新時に役職を保存。再参加や認証通過後に<strong>安全な範囲</strong>で自動復元。</p>
+        </div>
+        <div>
+          <h3>重大操作の即時検知</h3>
+          <p class="muted">チャンネル/ロール操作、BAN/KICK、Bot追加などを検知し、自動でKick/Ban等を実施。</p>
+        </div>
+        <div>
+          <h3>ログ収集</h3>
+          <p class="muted">メッセージ削除/編集、ボイス入退室、チャンネル/ギルド更新、ピン変更をEmbedで記録。</p>
+        </div>
+        <div>
+          <h3>Spotlight</h3>
+          <p class="muted">指定チャンネルから条件に合う投稿を定期でピックし、紹介Embedを投稿。</p>
+        </div>
       </div>
+    </section>
+
+    <section id="howto" class="card">
+      <h2>導入方法</h2>
+      <ol>
+        <li>このページの「Discordに追加」を押す</li>
+        <li>サーバーを選んで承認</li>
+        <li>サーバー内で <code class="cmd">!notify_set</code> を打つ（通知先チャンネルを設定）</li>
+      </ol>
+      <p class="muted">主なコマンド：<br>
+        <code class="cmd">!security_status</code>（全体設定を表示） /
+        <code class="cmd">!wl_add @user</code>（WLに追加） /
+        <code class="cmd">!log_set all</code>（すべてのログをこのチャンネルへ） /
+        <code class="cmd">!spotlight_on</code>（Spotlight開始）</p>
     </section>
 
     <section id="pricing" class="card">
       <h2>料金</h2>
       <div class="grid">
         <div class="card">
-          <h3>Free</h3>
-          <p class="muted">基本機能／月500コマンド／サーバー1</p>
-          <a class="btn primary" href="https://discord.com/oauth2/authorize?client_id=1405442735892201535&permissions=8&integration_type=0&scope=bot+applications.commands">無料で始める</a>
+          <h3>Community（無料）</h3>
+          <ul class="muted">
+            <li>WL上限 3名</li>
+            <li>Spotlight 手動1回/日</li>
+            <li>ロール復元 10回/日</li>
+            <li>ブランド表記あり</li>
+          </ul>
+          <a class="btn primary" href="https://discord.com/oauth2/authorize?client_id=1405442735892201535&permissions=8&integration_type=0&scope=bot+applications.commands">無料で使う</a>
         </div>
         <div class="card">
-          <h3>Pro</h3>
-          <p class="muted">無制限*／高度なモデレーション／優先サポート</p>
-          <a class="btn ghost" href="#" onclick="alert('後でStripeの支払いURLに差し替えてください');return false;">Proにアップグレード</a>
+          <h3>Standard / Pro（将来提供）</h3>
+          <p class="muted">より短い間隔のSpotlightや復元回数増など。提供時にご案内します。</p>
         </div>
       </div>
-      <p class="muted">*公序良俗・合理的範囲のフェアユースに基づく上限管理あり</p>
+      <p class="muted" style="margin-top:6px">※ プランの仕様はBot内の実装（PLAN_SPEC）に基づきます。</p>
     </section>
 
     <section class="card">
       <h2>よくある質問</h2>
-      <details><summary>解約はいつでもできますか？</summary><p class="muted">はい。Proはいつでも解約可能で、次回更新以降は請求されません。</p></details>
-      <details><summary>必要な権限は？</summary><p class="muted">最初は簡単にするために管理者権限（8）を付与しています。運用に合わせて絞ってください。</p></details>
-      <details><summary>サポートは？</summary><p class="muted">XのDMまたはメールで受け付けます（ページ内のボタンにアドレスを設定してください）。</p></details>
+      <details><summary>管理者権限(permissions=8)が必要なの？</summary>
+        <p class="muted">初期導入を簡単にするために管理者で招待しています。運用に合わせて権限を絞りたい場合は、ロール権限を調整してください。</p>
+      </details>
+      <details><summary>保存するデータは？</summary>
+        <p class="muted">Botの動作に必要なメタデータやログ、サーバー設定、ロールバックアップなど（詳しくは<a class="link" href="privacy.html">プライバシーポリシー</a>）。</p>
+      </details>
+      <details><summary>できないことは？</summary>
+        <p class="muted">音楽再生、チケット/サポートシステム、外部DBのWebダッシュボード等は現在提供していません。</p>
+      </details>
     </section>
 
-    <footer>© <span id="y"></span> My Discord Bot</footer>
+    <footer>
+      © <span id="y"></span> 公助君 |
+      <a class="link" href="privacy.html">プライバシーポリシー</a> |
+      <a class="link" href="terms.html">利用規約</a> |
+      <a class="link" href="mailto:muraoka510@gmail.com">お問い合わせ</a>
+    </footer>
   </div>
   <script>document.getElementById("y").textContent=new Date().getFullYear()</script>
 </body>
