--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <h2>できること</h2>
       <div class="grid">
         <div>
-          <h3>ホワイトリスト（WL）と権限ガード</h3>
+          <h3>ホワイトリストと権限ガード</h3>
           <p class="muted">WLユーザー/ロールのみが設定変更。無料プランはWLユーザー上限 <strong>3名</strong>。</p>
         </div>
         <div>
